Exercise2_03/manifests/deployment_logoutput.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercise
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      securityContext:
        fsGroup: 2000
      containers:
        - name: logoutput
          image: vuolahti/logoutput:05
