Exercise2_03/manifests/deployment_pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercise
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      securityContext:
        fsGroup: 2000
      containers:
        - name: pingpong
          image: vuolahti/pingpong:04
