Exercise2_03/manifests/service_pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercise
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong # This is the app as declared in the Deployment
  ports:
    - port: 2346 # This is a port that is available to the cluster
      protocol: TCP
      targetPort: 8080 # This is the target port
